--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
-title: Name  # You can add your name here
+title: Ashraf Ayman Alsalhi  # You can add your name here
 
-logo: 1.png # Use a relative path to logo image 
-
-description: Data science and AI in agriculture - where bytes and botany blend for a better world. # Fix hyphenation 
+description: Highly motivated, Self-Taught developer seeking to launch a career building mobile application using Flutter . # Fix hyphenation 
 
 show_downloads: true # Fix spelling
 
@@ -11,4 +9,4 @@ theme: jekyll-theme-minimal
 plugins:
   - jekyll-seo-tag # Add SEO plugin
 
-email: youremail@gmail.com # Allow visitors to contact you
+email: ashrafaymanalsalhi@gmail.com # Allow visitors to contact you
